--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 
 layout: home
 title: Home
-banner: "/assets/images/banners/Green1920x960.jpeg"
+# banner: "/assets/images/banners/Green1920x960.jpeg"
+banner: "/assets/images/banners/tree1.jpeg"
 ---
