--- a/about.html
+++ b/about.html
@@ -4,10 +4,13 @@ title: About
 ---
 
 <h2>About</h2>
-
+We study the electrical signalling that happens within a plant's body. We also look at plant-to-plant electrical signals.
+We use low-cost, custom developed as well as off-the-shelf tools that allow us to measure plant electrical signals with great precision and over long timeperiods.
+Some of our data is made available and is free to use, as long as you mention us as the source.
+We are scientists but not necessarily academics. That means whatever we do strictly follows the scientific method, but by not being part of the academic machinery 
+we can pursue any plant related research question that we find interesting :)
 <p>
-:art:&nbsp;About Phyclops.
+Plant electrophysiology is the study of electrical activity in plants. Plants have a variety of mechanisms for generating and transmitting electrical signals, such as action potentials (APs), variation potentials (VPs), and systemic acquired resistance (SAR) signals. APs are similar to those found in animals and involve changes in membrane potential that travel along the plant cell membranes. VPs are slower-moving waves of depolarization caused by wounding or other stresses, while SAR signals activate defense mechanisms throughout a plant when it is under attack from pathogens. Electrophysiological techniques have been used to study these phenomena and gain insight into how plants respond to their environment on an electrical level. More recently, electrical signals measured on plants are being studied with machine learning methods.
 </p>
 
-<p>
-Welcome to Phyclops.</p>
+
