--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@ title: About
 
 <h2>About</h2>
 We study the electrical signalling that happens within a plant's body. We also look at plant-to-plant electrical signals.
-We use low-cost, custom developed as well as off-the-shelf tools that allow us to measure plant electrical signals with great precision and over long timeperiods.
-Some of our data is made available and is free to use, as long as you mention us as the source.
+We use low-cost, custom designed as well as off-the-shelf tools that allow us to measure plant electrical signals with great precision and over long timeperiods.
+Some of our data is made available and is free to use, as long as you mention us as the source (see Downloads).
 We are scientists but not necessarily academics. That means whatever we do strictly follows the scientific method, but by not being part of the academic machinery 
 we can pursue any plant related research question that we find interesting :)
 <br/>
