--- a/about.html
+++ b/about.html
@@ -4,13 +4,16 @@ title: About
 ---
 
 <h2>About</h2>
-We are a small group of scientists but not necessarily academics. That means whatever we do strictly follows the scientific method, 
+We are a small group of scientists outside of academia. That means whatever we do strictly follows the scientific method, 
 but by not being part of the academic machinery we can pursue any plant related research question that we find interesting.
 <br/>
 <br/>
 We study the electrical signalling that happens within a plant's body. We also look at plant-to-plant electrical signals.
-We use low-cost, custom designed as well as off-the-shelf tools that allow us to measure plant electrical signals with great precision and over long timeperiods.
-Some of our data is made available and is free to use, as long as you mention us as the source (see Downloads).
+We use low-cost, custom designed as well as off-the-shelf hardware and software that allow us to measure and analyze 
+plant electrical signals with great precision and over long timeperiods. Some of our data is made available and is free 
+to use, as long as you mention us as the source (see Downloads).
+<br/>
+<br/>
 <p>
 Plant electrophysiology is the study of electrical activity in plants. Plants have a variety of mechanisms for generating and transmitting electrical signals, such as action potentials (APs), variation potentials (VPs), and systemic acquired resistance (SAR) signals. APs are similar to those found in animals and involve changes in membrane potential that travel along the plant cell membranes. VPs are slower-moving waves of depolarization caused by wounding or other stresses, while SAR signals activate defense mechanisms throughout a plant when it is under attack from pathogens. Electrophysiological techniques have been used to study these phenomena and gain insight into how plants respond to their environment on an electrical level. More recently, electrical signals measured on plants are being studied with machine learning methods.
 </p>
